adds donation.html and modifies contact.html

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
+    <meta name="description" content="SEDICRYPTIC: A.N. Author, Illustrator: P. Picture, Category: airdrops, Price:  free, Length: ">
+    <link rel="stylesheet" href="style.css">
+    <link rel="script" href="script.js">
 </head>
 <body>
     
